[package]
name = "multithreading"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasmworkers"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "multibin"
path = "src/main.rs"

[dependencies]
console_error_panic_hook = "0.1"
futures-channel-preview = "0.3.0-alpha.18"
js-sys = "0.3.57"
rayon = "1.1.0"
rayon-core = "1.5.0"
raytracer = { git = 'https://github.com/alexcrichton/raytracer', branch = 'update-deps' }
wasm-bindgen = { version = "0.2.80", features = ['serde-serialize'] }
wasm-bindgen-futures = "0.4.30"

[dependencies.web-sys]
version = "0.3.23"
features = [
  'CanvasRenderingContext2d',
  'ErrorEvent',
  'Event',
  'ImageData',
  'Navigator',
  'Window',
  'Worker',
  'DedicatedWorkerGlobalScope',
  'MessageEvent',
]
